# evolrs

./: Cargo.toml  README.md  Roadmap.md  fns.md  full_tensor_api.md  rust-toolchian.toml
.cargo/: config.toml
crates/evolrs_core/: Cargo.toml
crates/evolrs_core/src/: lib.rs
crates/evolrs_core/src/device/: mod.rs
crates/evolrs_core/src/dtype/: mod.rs
crates/evolrs_core/src/kind/: mod.rs  restriction.rs  scalar.rs  type_coercion.rs
crates/evolrs_core/src/nn/: build.rs  mod.rs  vs.rs
crates/evolrs_core/src/nn/modules/: linear.rs
crates/evolrs_core/src/nn/optim/: mod.rs
crates/evolrs_core/src/ops/: bitwise.rs  clone.rs  mod.rs  operators.rs  operators_broadcast.rs  operators_with_coercion.rs  partialeq.rs  scalar_operators_with_coercion.rs  scalar_ops.rs
crates/evolrs_core/src/ops/method_traits/: broadcast.rs  matmul.rs  mod.rs
crates/evolrs_core/src/shapes/: broadcast.rs  mod.rs  shape.rs
crates/evolrs_core/src/tensor/: mod.rs
crates/evolrs_core/src/tensor/wrap/: argmax.rs  argmin.rs  cmp.rs  flatten.rs  func.rs  item.rs  math.rs  matmul.rs  mod.rs  ops.rs  scalar_ops.rs  squeeze.rs  sum.rs  unsqueeze.rs  view.rs
crates/evolrs_core/src/tensor/wrap/math/: add.rs  add_sub_mul_div.rs  mod.rs
crates/evolrs_core/src/utils/: mod.rs
crates/evolrs_macros/: Cargo.toml
crates/evolrs_macros/src/: lib.rs
crates/evolrs_macros/src/crate_shape/: mod.rs  parse_args.rs
crates/evolrs_macros/src/crate_shape/method_traits/: broadcast.rs  broadcast.txt  broadcast_inplace.rs  matmul.rs  mod.rs
crates/evolrs_macros/src/crate_shape/methods/: argmax.rs  argmin.rs  broadcast.rs  matmul.rs  mod.rs  squeeze.rs  squeeze_dim.rs  sum.rs  unsqueeze.rs
crates/evolrs_macros/src/crate_shape/nn/: forward.rs  mod.rs
examples/tensor/: Cargo.toml  div.txt
examples/tensor/src/: main.rs
src/: lib.rs
