[workspace]
resolver = "2"
members = [
	"crates/*",
	"examples/*",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
readme = "README.md"
license = "MIT or Apache-2.0"

[package]
name = "evolrs"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT or Apache-2.0"

[features]
default = []

all = ["nightly", "half"]
non-nightly = ["half"]

nightly = ["evolrs_core/nightly"]
half = ["evolrs_core/half"]

[dependencies.evolrs_core]
path = "crates/evolrs_core"
version = "0.1.0"

[workspace.dependencies]
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = {version = "2.0.87", features = ["full"]}
trybuild = "1.0.101"
serde = {version = "1.0.214", features = ["derive"]}
tch = "0.18.0" 
