[package]
name = "evolrs_macros"
description = "Macro crate for evol_rs"
authors = ["xupremix <xupremix.me@gmail.com>"]
edition.workspace = true
license.workspace = true
version.workspace = true
readme.workspace = true

[features]
nightly = []
broadcast-semantics = []
type-coercion = []
half = ["dep:half"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
half = { version = "2.4.1", optional = true }
